<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChallongeMobile</string>
    <string name="welcome_text">Welcome to Challonge Mobile!</string>
    <string name="please_login_text">Please login with your Challonge information:</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username:</string>
    <string name="password_text">API Key:</string>
    <string name="title_activity_challonge_home">Challonge Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_error_text">Incorrect login information!</string>
    <string name="tourney_create_label_text">Create a New Tournament</string>
    <string name="tourney_name_label_text">Tournament Name:</string>
    <string name="tourney_type_label_text">Tournament Type:</string>
    <string name="tourney_type_single_elimination">Single Elimination</string>
    <string name="tourney_type_double_elimination">Double Elimination</string>
    <string name="tourney_type_round_robin">Round Robin</string>
    <string name="tourney_type_swiss">Swiss</string>
    <string name="title_activity_button_list">ButtonListActivity</string>
    <string name="title_activity_tournament_view">View My Tournaments</string>
    <string name="title_activity_create_tournament">Create New Tournament</string>
    <string name="title_activity_search_tournaments">SearchTournaments</string>
    <string name="title_activity_organizations">Organizations</string>
    <string name="title_activity_show_player">Show Players</string>
    <string name="title_activity_tournament_options">TournamentOptions</string>
    <string name="title_activity_show_bracket">ShowBracket</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_tournament">ShowTournament</string>
    <string name="title_activity_search_organizations">SearchOrganizations</string>
    <string name="title_activity_show_organization">ShowOrganization</string>

</resources>