<?xml version="1.0"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:id="@+id/layout"
        android:orientation="vertical"
        tools:context=".MainActivity"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:gravity="center_vertical|center_horizontal">

        <TextView android:id="@+id/pleaseLoginLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="#ffffffff"
            android:text="@string/please_login_text"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/usernameLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ffffffff"
            android:text="@string/username_text"
            android:layout_gravity="center_horizontal" />

        <EditText android:id="@+id/usernameTextField"
            android:background="#ffffffff"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ff000000"
            android:maxLength="50"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_gravity="center_horizontal" />

        <TextView android:id="@+id/passwordLabel"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:textColor="#ffffffff"
            android:text="@string/password_text"
            android:layout_gravity="center_horizontal"
        />

        <EditText android:id="@+id/passwordTextField"
            android:background="#ffffffff"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#ff000000"
            android:ems="10"
            android:inputType="textVisiblePassword"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="What is this?"
            style="@style/BlendedButtonStyle"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Keep Me Logged In"
            android:checked="false"
            android:textColor="#ffffffff"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical" />

        <Button android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_text"
            android:onClick="onClick"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/progressBar"
            android:indeterminate="false"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>